Bug 1903721 - Use imgLoader::GetMimeTypeFromContent in setFaviconForPage when dealing with data URIs to ensure correct mime type is passed. r=mak,places-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D218245